# read_tune_api

./: .env.sample  .gitignore  Dockerfile  README.md  database.db  pyproject.toml
app/: main.py
app/controllers/: books.py  llm.py  spotify.py  streaming.py  user.py  youtube.py
app/models/: models.py  states.py
app/services/: google_books.py  llm_langgraph.py  spotify.py  streaming.py  youtube.py
app/utils/: prompts.py
tests/: test_main.py
tests/controllers/: test_books.py  test_controller_spotify.py  test_controller_youtube.py  test_llm.py
tests/services/: test_google_books.py  test_llm_langgraph.py  test_spotify.py  test_youtube.py
